<resources>
    <string name="app_name">MatchTracker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home Fragment</string>
    <string name="match_details">Match details</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="current_sport">Current sport</string>
    <string name="current_date">Current Date</string>
    <string name="sport">%1$s</string>
    <string name="match_this_day">There is %1$s match this day</string>
    <string name="loading">LOADING</string>
    <string name="todo">TODO</string>
    <string name="match">Match</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="match_tracker">Match tracker</string>
    <string name="leagues">Leagues</string>
    <string name="founded">Fondée en %1$s</string>
    <string name="located">Localisation : %1$s / %2$s</string>
    <string name="add">Add</string>
    <string name="added">Added</string>
    <string name="next_matchs">Next matchs</string>
    <string name="team_details">Team details</string>
    <string name="favorites_teams">Favorites teams</string>
    <string name="no_favorite">No favorite</string>
</resources>