<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:checkable="true"
    tools:context="com.example.matchtracker.MainActivity"
    tools:showIn="navigation_view">
    <group android:id="@+id/group_delete">
        <item
            android:id="@+id/fragment_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/fragment_leagues"
            android:icon="@drawable/ic_teams"
            android:title="@string/leagues"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/fragment_favorites"
            android:icon="@drawable/ic_favorites"
            android:title="@string/favorites"
            app:showAsAction="ifRoom" />
    </group>
</menu>