<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="navController"
            type="androidx.navigation.NavController" />

        <variable
            name="uiModel"
            type="com.example.matchtracker.main.home.HomeUiModel" />

        <variable
            name="presenter"
            type="com.example.matchtracker.main.home.HomePresenter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/match_tracker"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            android:typeface="monospace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/current_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/current_sport"
            android:textColor="@color/purple_500"
            android:textSize="15sp"
            android:typeface="monospace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <FrameLayout
            android:id="@+id/sport_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_spinner_rectangle_stroke"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_sport">

            <Spinner
                android:id="@+id/sport_spinner"
                android:layout_width="200dp"
                android:layout_height="50dp" />

        </FrameLayout>

        <TextView
            android:id="@+id/current_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/current_date"
            android:textColor="@color/purple_500"
            android:textSize="15sp"
            android:typeface="monospace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sport_layout" />

        <FrameLayout
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_spinner_rectangle_stroke"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDate"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="false"
                android:onClickListener="@{presenter::callDatePickerDialog}"
                android:padding="10dp"
                android:text="@{uiModel.selectedDate}"
                android:textColor="@color/purple_200"
                android:textSize="15sp"
                android:typeface="monospace" />

        </FrameLayout>

        <TextView
            android:id="@+id/match_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text='@{@string/match_this_day(uiModel.matchCount)}'
            android:textColor="@color/purple_500"
            android:textSize="15sp"
            android:typeface="monospace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_sport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:games="@{uiModel.matchSport}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/match_count"
            app:navController="@{navController}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>